fix css layout on mobile browser

--- a/components/main-content.css
+++ b/components/main-content.css
@@ -6,6 +6,5 @@
 }
 
 .main-content__inner {
-  overflow-y: auto;
   overflow-x: hidden;
 }
