--- a/components/table.css
+++ b/components/table.css
@@ -1,10 +1,17 @@
+.ov-x {
+  position: sticky;
+  top: 0;
+  overflow-x: auto;
+}
+
 table {
+  /* position: sticky; */
+  /* top: 0; */
   display: flex;
   flex-wrap: wrap;
   white-space: nowrap;
   border-spacing: 0;
   border-collapse: collapse;
-  table-layout: fixed;
 }
 
 th {
@@ -14,23 +21,24 @@ th {
 th,
 td {
   min-width: 200px;
-  height: 30px;
+  height: 40px;
 }
 
-table thead {
+thead th {
   position: sticky;
   top: 0;
   background-color: steelblue;
   z-index: 1;
 }
 
-table tbody tr th {
+thead th:first-child {
+  z-index: 2;
+}
+
+thead th:first-child,
+tbody tr th {
   min-width: 30px;
   position: sticky;
   left: 0;
   background-color: steelblue;
-}
-
-tbody {
-  overflow-x: auto;
 }
