--- a/style.css
+++ b/style.css
@@ -4,10 +4,7 @@
 @import "components/header.css";
 @import "components/content.css";
 @import "components/table.css";
-
-:root {
-  --height: 50px;
-}
+@import "components/footer.css";
 
 * {
   margin: 0;
